# u2vpodcast

./: .dockerignore  .gitignore  .justfile  Cargo.toml  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  Dockerfile.bak  Dockerfile.multi.bak  README.md  build-arm64.sh  config.yml  docker-bake.hcl  docker-compose.caddy.yml  docker-compose.standalone.yml  docker-compose.yml  entrypoint.sh  genbake.sh  platform.sh  sample.env  sample.http  sample.hurl
assets/: channels.js  player.css  player.js  podcast.html
assets/css/: alerts.css  custom.css  pagination.css
assets/js/: auth.js  channel.js  common.js  config.js  init.js  login.js  main.js  user.js
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
frontend/src/: app.html
frontend/src/lib/: channel.ts  episode.ts  global.ts  index.ts  types.ts  user.ts
frontend/src/lib/components/: ChannelCard.svelte  ChannelCardEditor.svelte  ChannelDialog.svelte  ConfirmDialog.svelte  EpisodeCard.svelte  LoginForm.svelte  NewChannelDialog.svelte
frontend/src/lib/components/header/: Header.svelte
frontend/src/lib/components/icons/: RewindIcon.svelte  Rss.svelte
frontend/src/lib/components/player/: AudioPlayer.svelte  CustomAudioPlayer.svelte  LoginForm.svelte  RangeSlider.svelte  VolumeControl.svelte
frontend/src/lib/stores/: auth.ts  loading.store.ts  notification.store.ts  user.store.ts
frontend/src/lib/utils/: constant.ts  types.ts
frontend/src/lib/utils/helpers/: input.validation.ts
frontend/src/lib/utils/requests/: logout.requests.ts  posts.requests.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/[id]/: +page.svelte  +page.ts
frontend/src/routes/auth/login/: +page.svelte
frontend/src/routes/configure/channels/: +page.svelte  +page.ts  guarded.svelte
frontend/src/routes/login/: +page.svelte
migrations/: 20221022081253_table_channels.up.sql  20221023050556_table_episodes.up.sql  20221202055613_users.up.sql  20230430091350_duration.down.sql  20230430091350_duration.up.sql  20230508182227_channels.down.sql  20230508182227_channels.up.sql  20230508190932_episodes.down.sql  20230508190932_episodes.up.sql  20230514073056_users.up.sql  20240316082407_users.up.sql  20240316092627_episodes.up.sql  20240317174251_config.up.sql  20240319181850_channels.up.sql
src/: config.rs  main.rs
src/handlers/: channels.rs  config.rs  episodes.rs  feed.rs  login.rs  logout.rs  mod.rs  options.rs  root.rs  status.rs  users.rs
src/http/: channel.rs  channels.rs  episode.rs  episodes.rs  error.rs  estatic.rs  extractor.rs  html.rs  jwt_auth.rs  mod.rs  root.rs  rss.rs  user.rs  users.rs
src/middleware/: auth.rs  mod.rs
src/models/: appstate.rs  channel.rs  config.rs  episode.rs  error.rs  mod.rs  param.rs  parameters.rs  response.rs  role.rs  rss.rs  user.rs  youtube.rs  ytdlp.rs  ytinfo.rs
src/routes/: channels.rs  episodes.rs  main.rs  mod.rs
src/utils/: mod.rs  token_utils.rs  worker.rs
templates/: base.html  channel.html  channels.html  config.html  error.html  hello.html  index.html  login.html  podcast.html  signin.html  signup.html  users.html
templates/config/: channels.html  options.html  users.html
templates/navigation/: config.html  nav.html  web.html
templates/web/: channel.html  channels.html  episodes.html
