[package]
name = "u2vpodcast"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
tokio = { version = "1.27", features = ["full", "time"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "offline", "chrono"] }
axum = { version = "0.6" , features = ["multipart"] }
axum-extra = { version = "0.7", features = ["cookie"] }

# Axum builds on the types in Tower
# tower = "0.4"
tower-http = { version = "0.4", features = [ "trace", "fs" ] }

# jwt
jsonwebtoken = "8.3"

# Templates
tera = "1.17"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
# async-trait = "0.1"
# regex = "1"
base64 = "0.20"
# change modification file
filetime = "0.2"

# RSS
rss = "2.0"
rand_core = { version = "0.6.4", features = ["std"] }
argon2 = "0.5.0"
