[package]
name = "u2vpodcast"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-service = "2.0.2"
actix-web = "4.5.1"
base64 = "0.22.0"
chrono = { version = "0.4.35", features = ["serde"] }
chrono-tz = "0.8.6"
filetime = "0.2.23"
futures = "0.3.30"
jsonwebtoken = "9.2.0"
md5 = "0.7.0"
minijinja = { version = "1.0.12", features = ["loader"] }
once_cell = "1.19.0"
regex = "1.10.3"
rss = "2.0.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["sqlite", "macros", "chrono", "runtime-tokio"] }
time = { version = "0.3.34", features = ["local-offset"] }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std", "time"] }
ureq = "2.9.6"
