[package]
name = "u2vpodcast"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-service = "2.0.2"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.5.1"
argon2 = "0.5.3"
base64 = "0.22.0"
chrono = { version = "0.4.38", features = ["serde"] }
filetime = "0.2.23"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
regex = "1.10.4"
rss = "2.0.7"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = ["sqlite", "macros", "chrono", "runtime-tokio"] }
time = { version = "0.3.36", features = ["local-offset"] }
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std", "time"] }
ureq = "2.9.7"
